记录Kotlin协程的初步笔记

--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -45,28 +45,22 @@ https://www.jianshu.com/p/d23c688feae7
 
 https://discuss.kotliner.cn/ kotlin 中文论坛
 
-
-有栈协程 无栈协程
-
 ## 1. 概述
-协作式多任务（对应协程）和抢占式多任务（对应多线程），都能完成并发的需求，但是仅使用多线程来完成例如客户端的线程之间的频繁交互则比较麻烦，像启动一个线程发起网络请求获取数据后一般通过回调、线程同步等方式将结果发到其他线程，复杂的情况更会出现多重回调缩进，或者代码分散各处，很容易使代码流程复杂冗余。而协程可以把异步的代码写成同步的形式，从而使协作式任务的代码可以更加简洁。
+协程可以用来简化异步执行的代码，异步不一定是多线程，只要是切换了调用栈就会产生异步，比如dialog的确定和取消的点击事件回调就是切换了调用栈，但并没有多线程。
+
+协作式多任务（对应协程）和抢占式多任务（对应多线程），都能完成异步、并发的需求，但是直接使用多线程来完成例如Android客户端的主线程和其他线程之间的通信会比较麻烦。例如启动一个线程发起网络请求获取数据后通过回调、线程同步等方式结合Handler将结果发到主线程，复杂的情况会出现多重回调缩进，或者代码分散各处，很容易使代码变得混乱。而协程可以把异步的代码写成同步的形式，从而使协作式任务的代码可以更加简洁。
 
 协程主动让出执行权，线程基于cpu时间片抢占执行权
 
-Kotlin协程分为两层：
-* 标准库的协程API
-* KotlinX中的协程上层框架
-
-
-Kotlin协程的JVM实现还是一个线程框架，在Android中使用kotlin的协程，先添加以下两个库：
+Kotlin协程的JVM实现从Android开发角度来看，可以认为是线程框架，但是实际还有更多的能力。在Android中使用kotlin的协程，先添加以下两个库：
 ```
 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 ```
 
-CoroutineScope 包含 CoroutineContext，CoroutineContext包含Job、Dispatcher等，作用域启动新协程也是一个新的作用域，类似树形结构。
+默认情况，当一个父协程被取消的时候，所有它的子协程也会被递归的取消，子协程异常时，父协程将取消自己，当然，其他子协程也会被取消。如果使用SupervisorScope，则子协程异常时不会影响到父协程以及父协程中的其他子协程。
 
-当一个父协程被取消的时候，所有它的子协程也会被递归的取消。一个父协程总是等待所有的子协程执行结束。
+coroutineScope和supervisorScope既提供内部控制父子协程的异常传播方式，还可以用于在挂起函数中安全地创建协程（结构化并发）。它们都会继承自所在作用域创建新的子作用域，并使用自己的Job。
 
 ## 2. 启动协程
 ```
@@ -256,8 +250,6 @@ println("Completed in $time ms")
 #### 结构化并发
 结构化并发就是 parent 总会等待 children 完成。不会丢失正在工作的协程，不会丢失异常。
 
-协程中可以多次调用launch或者async实现并发执行，正常情况launch和async会立即返回，而不会等到其中的任务执行完毕，这样可能产生一些副作用。如果需要使它们执行完毕后才返回，就可以使用 coroutineScope 函数，它会产生一个新的作用域，其中
-
 #### 惰性启动
 async 和 launch 都可以设定 start=CoroutineStart.LAZY 而变为惰性的，也就是在调用 Job 的 start() 或者 join() 函数或者 Deferred 的await() 时才会执行。
 
@@ -286,6 +278,117 @@ async 和 launch 都可以设定 start=CoroutineStart.LAZY 而变为惰性的，
 
 
 ## 源码分析
+
+### 1. kotlin 协程的设计思想
+Kotlin协程分为两层：
+* 标准库的协程API
+* Kotlinx中的协程上层框架
+
+![Kotlin协程库的结构（图片来自上海GDG霍丙乾分享）](../引用图片/Kotlin协程库的层次.png)
+
+&emsp;&emsp;Kotlin 协程标准库只提供基本的协程构建方式和 `suspend` 关键字，而更方便、更强大的功能在 kotlinx 中的上层协程库提供。  
+&emsp;&emsp;也就是说即使不用官方的 kotlinx 中的上层协程库，只用标准库就足够完成协程所需的功能，并且大家还可以使用标准库来开发自己的库，而不用官方 kolinx 的上层协程库。  
+&emsp;&emsp;并且 Kotlin 是一个以多平台为目标的语言，它的协程需要用于各种不同的平台，所以最终 Kotlin 的协程设计会比其他语言更复杂，层次更多。
+
+官方 kotlinx 中的上层协程库中，关键是 core，它包括了我们常用的的协程各种功能。而其他例如 android、reactive 等部分属于针对各种场景的扩展。
+
+### 2. 通过标准库分析协程
+虽然一般使用Kotlin的协程是使用的kotlinx内的上层协程库，但是由于上层协程库功能较多、封装较深，不适合分析协程原理，而协程标准库更加简单，且具备核心功能，所以在这里先通过协程标准库来分析原理。
+
+####  createCoroutine函数
+
+首先，看一个标准库 Continuation.kt 文件中的函数：
+```
+public fun <T> (suspend () -> T).createCoroutine(
+    completion: Continuation<T>
+): Continuation<Unit> =
+    SafeContinuation(createCoroutineUnintercepted(completion).intercepted(), COROUTINE_SUSPENDED)
+```
+这个函数就是面向开发者的一个创建协程的基本函数，它是一个 `suspend` 修饰的函数变量的扩展函数，下面来使用它：
+```
+suspend { "协程结果" }.createCoroutine(object : Continuation<String> {
+    override val context = EmptyCoroutineContext //这里简单使用空上下文
+
+    override fun resumeWith(result: Result<String>) {
+        print("结果为：result.getOrNull()")
+    }
+}).resume(Unit)
+```
+用 `suspend` 修饰的 lambda 表达式来调用 `createCoroutine` 函数，传入一个 `Continuation` 变量，然后对返回的 `Continuation<Unit> ` 调用 `resume` 函数，就启动了这个协程，最终可以在传入的变量的 `resumeWith` 内打印出结果为 `suspend`函数变量的返回值，这里为“协程结果”。
+
+`suspend lambda` 用于创建协程会被编译成 `SuspendLambda` 子类，而挂起函数会被编译成增加一个 `continuation` 参数的函数，并且，如果用于启动协程，则会被包装于一个continuation中执行，如果在已有协程中被执行，则？？？。
+
+kotlin上层框架的 CoroutineScope.launch内部实际也是对suspend lambda表达式调用`createCoroutine`或类似方法
+
+这里我们先考虑 `suspend lambda` 的情况，它被编译为一个继承 `SuspendLambda` 的匿名内部类，而 `SuspendLambda` 就是 `Continuation` 的子类。`SuspendLambda` 有一个抽象函数 `invokeSuspend`（这个函数在它的父类 `BaseContinuationImpl` 中声明）。我们被编译生成的匿名内部类中的 `invokeSuspend` 的实现就是我们的 `suspend lambda` 表达式的内容，对于我们这里的情况，就是简单地返回字符串。
+
+所以，我们最终可以了解到，`createCoroutine` 函数返回的 `Continuation<Unit> ` 实际就是将我们的 `suspend lambda` 内容包装多次的结果，因此调用它的 `resume` 就可以执行到我们写的协程代码。
+
+`SafeContinuation` 是一个限制只能恢复一次的 `Continuation`，在 `createCoroutine` 中或者挂起函数调用 `suspendCoroutine` 中都会使用，因为这两个场景都只能恢复一次。而包装协程代码块的实际 `Continuation` 不是`SafeContinuation` ，因为协程本身是可以多次恢复的。不过，包装协程代码块的实际 `Continuation`会作为`SafeContinuation`内部的delagete，从而才能通过`SafeContinuation`去执行协程内的代码。
+
+#### 其他启动协程的函数
+`createCoroutine` 函数还有多一个 `receiver` 参数的版本：
+```
+public fun <R, T> (suspend R.() -> T).createCoroutine(
+    receiver: R,
+    completion: Continuation<T>
+): Continuation<Unit> =
+    SafeContinuation(createCoroutineUnintercepted(receiver, completion).intercepted(), COROUTINE_SUSPENDED)
+```
+这个版本可以在 `suspend lambda` 中访问到 `receiver` 对象，这里不再赘述。
+
+还有 `startCoroutine` 函数，实际就是自动对 `createCoroutine` 函数调用 `resume` ,直接启动。
+
+#### 挂起
+`suspend lambda` 将被包装于 `BaseContinuationImpl` 的 `invokeSuspend` 中，被触发 `resumeWith` 时，调用 `invokeSuspend` 时，可以看到返回状态，会影响后续是否继续执行continuation还是真正挂起协程。如果没有挂起，就是 `invokeSuspend` 中直接返回了正常结果；如果挂起，返回的就是 `COROUTINE_SUSPENDED` ，`resumeWith` 将异步被调用，然后恢复协程执行。
+
+suspendCoroutine函数是suspendCoroutineUninterceptedOrReturn函数的包装，用于在挂起函数中获取到当前挂起函数的continuation。实质上，delay、yield、withContext等官方自带的挂起函数，内部都是通过suspendCoroutineUninterceptedOrReturn来完成挂起和恢复流程，即拿到continuation在适当时机调用resume。
+
+https://github.com/enbandari/DiveIntoKotlinCoroutines-Sources 中的 `Generator.kt` 用kotlin协程的标准库基础设施实现了简单的python的Generator风格的协程。其中关键原理 就是yield函数中，suspendCoroutine的continuation不会立即调用resume，所以会实际挂起协程，然后等到遍历流程中hasNext和next调用了continuation的resume之后，协程再恢复并继续执行。
+
+#### Continuation-Passing-Style
+状态机结合Continuation的传递。根据多个挂起点，将当前协程体分为多个状态，例如协程内部只调用了一个挂起函数，那么状态0为开始到第一个挂起函数，状态1为第一个挂起函数之后的内容。将状态机包装在Continuation的子类BaseContinuationImpl的invokeSuspend中，从状态0开始执行，把状态改为1，执行到第一个挂起函数，把this也就是当前Continuation传入挂起函数，待挂起函数执行完毕，回调Continuation的resume，就回到当前Continuation执行状态1。
+```
+//原有代码
+```
+
+```
+//反编译代码
+```
+
+### 3. 协程上层框架
+了解了作为基础设施的协程标准库后，已经可以明白Kotlin协程的核心原理和设计思想，但是标准库作为基础设施，API使用不够方便，功能也不够强大，所以还需要关注协程上层框架的设计。
+
+#### 协程的描述
+对比描述线程的Thread类，Kotlin协程的上层框架用Job来描述协程
+---------------------------
+
+#### 继承关系
+协程作用域和它启动的协程，以及协程启动的子协程，上下文中除了Job都会继承，而协程作用域的Job是启动的协程的父Job，协程的Job又是子协程的父Job
+
+
+#### 取消
+Kotlin协程的取消：取消作用域会取消它启动的协程，取消协程Job会取消子协程Job。在协程代码中可以主动判断作用域是否被取消，从而自定义逻辑。对于挂起函数，官方提供的挂起函数都支持取消，而我们写的挂起函数要支持取消的话，则要使用suspendCancellableCoroutine。在挂起函数中，既可以主动判断是否已取消，也可以监听取消的回调。
+
+在suspendCancellableCoroutine内监听取消，当协程取消时，就会回调suspendCancellableCoroutine对应的CancellableContinuation内的取消回调函数，然后通过resumeWithException传入CancellationException。在生成的状态机代码中，检测结果包含异常，则不会修改状态机，而会抛出异常，结束这次resume。由于CancellationException被特殊对待，所以不会引发崩溃。如果在取消后，我们并没有在挂起函数中支持取消，在取消后还是调用resume，那么依然会继续执行。
+
+所以应该在挂起函数中监听取消或者主动判断取消，以避免取消后还调用resume。对比Retrofit的RxJavaCallAdapter，支持dispose取消的方式是自定义Observable，通过onSubscribe传给下游的Disposable的实现类的dispose方法就会取消网络请求。
+
+#### 异常处理
+协程的异常管理，结合两个方式处理。一是对每次resume的结果都检测是否包含异常，我们调用resumeWithException就对应这种情况；二是把整个invokeSuspend函数都放在try-catch中，如果有异常，同样包装在Result中，使用resume函数交给最后的Continuation，在协程扩展库中，这个最后的Continuation就是Job。
+
+可以看出，如果我们的异常是在异步的代码中抛出，那么协程的异常管理方式是无法捕获的。即使是CancellationException，在异步代码中抛出，同样会造成进程崩溃。所以对于异步的代码，我们需要自己去使用try-catch捕获，并且使用resumeWithException传递，才能使协程的异常管理生效。
+
+默认情况，当前协程内发生异常，将传给父级协程，也就是parentJob，父级协程取消所有子协程和自身，然后把异常传递给更上级的父协程，直到顶级作用域。如果异常所在协程的父级直到顶级作用域中任意位置设置了CoroutineExceptionHandler，那么异常会交给CoroutineExceptionHandler处理，否则将交给Thread.uncaughtExceptionHanlder处理，默认将抛出异常，造成应用崩溃。当然，默认情况，即使有异常处理器，但异常仍会引发协程链的取消。
+
+如果希望协程发生异常，而父协程不会取消其他子协程，则可以使用SupervisorJob或者supervisorScope，当然，仍需要使用CoroutineExceptionHandler或者Thread的方式来避免崩溃，因为无论使用哪种job，没有捕获的异常都会造成崩溃。
+* SupervisorJob必须用于顶级作用域中，而不能在例如launch的参数中使用，因为launch启动协程，协程会覆盖上下文的Job，传参的SupervisorJob也就无效了，async函数同理。此时CoroutineExceptionHandler可以通过launch放在父级协程中，也可以放在顶级作用域中。
+* supervisorScope函数用于在协程或挂起函数中，创建一个新的作用域，它会继承所在协程的上下文，并且跟SupervisorJob的效果一样，新的作用域中的子协程发生异常，不会影响其他子协程。此时CoroutineExceptionHandler可以通过launch放在父级协程中，也可以放在顶级作用域中。
+
+supervisorScope函数在子协程发生异常时，将判断父级也就是新建的作用域是否传递异常，当前情况就是新建作用域不会取消任何子协程，也不会继续向上传递异常；那么子协程就寻找上下文中的CoroutineExceptionHandler处理异常，如果没有，就使用Thread.uncaughtExceptionHanlder处理，默认就是崩溃。使用supervisorScope函数，CoroutineExceptionHandler可以放在supervisorScope函数的直接子协程中，或者supervisorScope函数的父级协程或者顶级作用域，因为可以通过上下文继承到supervisorScope函数新建的作用域的上下文中，supervisorScope函数子协程也可以继承，但直接子协程才满足它的父级不传递的条件，此时才会从上下文寻找CoroutineExceptionHandler等处理器，所以最低只能放在直接子协程。
+
+对于默认情况，异常会引发协程链的取消，但只要异常所在的父级至顶级作用域中设置了异常处理器，就不会引发崩溃。也就是说，默认情况，异常会一直向上引发协程链条的取消，而异常的捕获只需要就近找到CoroutineExceptionHandler处理器即可
+
 Continuation Passing Style  ==  Callback，将continuation传到内部，而不必返回。
 
 标准库中的Continuation 是一个通用的回调接口
