增加ContentProvider的数据传输简要笔记

--- a/Android/ContentProvider/内容提供器的使用和原理.md
+++ b/Android/ContentProvider/内容提供器的使用和原理.md
@@ -319,3 +319,6 @@ AMS开始就已经存储了ContentProviderRecord，但是数据不完整，从ha
 1. 访问自己进程的ContentProvider：应用进程启动后，初始化ContentProvider，就会在ActivityThread内存储IContentProvider到ContentProviderHolder，则直接获取
 2. A跨进程访问B，且B进程已启动：B进程已启动，则相关数据已存储于AMS，则acquireProvider会调用AMS的getContentProvider方法，其中就会从AMS的数据中得到B进程启动的时候发布到AMS的IContentProvider
 3. A跨进程访问B，且B进程未启动：执行acquireProvider，然后一样执行到AMS的getContentProvider方法，其中判断进程B未启动，则会先启动进程B，并且等待进程B发布IContentProvider到AMS，然后返回数据。
+
+### 数据传输
+ContentProvider的数据传输是Binder结合匿名共享内存的方式。例如调用query方法会通过Binder传递参数，而获取到Cursor后，例如sqlite返回的Cursor，实际就会通过匿名共享内存的方式传输数据。因为Binder适合小数据传输，而大数据传输更适合使用匿名共享内存。
