Java泛型记录相关博客

--- a/Java/泛型.md
+++ b/Java/泛型.md
@@ -1,5 +1,16 @@
-#### 1.泛型的原生类型
-###### 1.1 List<T>
+## 为什么使用泛型擦除
+https://juejin.im/post/6844904134273925134
+
+https://www.cnblogs.com/leyangzi/p/11379525.html
+
+https://juejin.im/post/6844903901552967688#heading-5
+
+https://www.zeng.dev/post/2019-java-generic/#heading2
+
+
+## 泛型的注意点
+### 泛型的原生类型
+#### List<T>
 以列表为例，List 表示`不做类型检查`，且可以放任何类型，所以如下代码可以正常运行：
 ```
 ArrayList arrayList = new ArrayList<String>();
@@ -9,7 +20,7 @@ System.out.println(arrayList);
 // int i = arrayList.get(0);这一行会编译报错Object无法转为int，除非强制转换
 // String s = arrayList.get(2);这一行会编译报错Object无法转为String，除非强制转换
 ```
-###### 1.2 H<T extends A>
+#### H<T extends A>
 如果泛型类声明时是`class H<T extends A>`，那么用H声明对象，只要是`使用A及其子类型就行。
 ```
 class A {}
@@ -60,7 +71,7 @@ System.out.println(h.getT3());
 
 > 综上，使用原生类型声明，如果泛型类是`<T>`则当做Object，如果是`<T extends A>`则当做A。以 `<T>`为例，编译时，在要传Object时，可以传任意类型，因为任意类型都是Object的子类；但是获取到Object却不能转为其他子类，即使实际传入的是该类型，因为编译时无法确定当前类型，只知道是Object，所以需要强制转换，不安全。
 可以看出用原生类型声明后，后面赋值的泛型参数类型会被忽略，比如后者的`H h = new H<B>()`是当做类型参数A处理的。
-#### 2. List<Object>
+### List<Object>
 声明List<Object>和原生类型类似，但是赋值的类型参数就只能是Object:
 ```
 ArrayList<Object> list = new ArrayList<Object>();
@@ -76,7 +87,7 @@ ArrayList<Object> list=new ArrayList<String>();//编译报错
 Object[] objects = new String[10];
 objects[0] = Boolean.FALSE;//运行时错误
 ```
-#### 3. List<?>
+### 3. List<?>
 用List<?>声明对象，表示可以是任意的某一类型
 ```
 List<?> list = new ArrayList<String>();
@@ -87,7 +98,7 @@ void foo(List<?> list){
 ```
 但是此时将无法使用传入泛型类型对象的方法，除非传入null；返回泛型类型对象的方法将无法赋值给任何变量。所以只有在不关心类型的时候才使用<?>
 
-#### 2. 泛型 协变和逆变
+## 泛型 协变和逆变
 Java的泛型本身具有「不可变性 Invariance」，也就是
 ```
 List<Integer> 不是 List<Number> 的子类
@@ -114,7 +125,7 @@ List<Object> 是 List<? super Number> 的子类
 
 只能从中读取的对象为生产者，并称那些你只能写入的对象为消费者。所以泛型协变就是生产者，泛型逆变就是消费者
 
-#### 3.注意点
+### 注意点
 泛型静态方法，泛型需要自行定义，无法依赖于类的泛型。例如：
 ```
 class MyClass<T>{
