Android的WMS分析补充，触摸事件分发待办

--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -1,6 +1,7 @@
 传递到activity的流程可以通过打印调用栈查看
 
-待办：注意cancel
+https://www.wanandroid.com/wenda/show/11287
+待办：注意cancel 一般父view 拦截 会给子view发cancel，如果move事件超出子view范围，默认还是发给子view处理，应该例如父view是ScrollView等滚动类的View，识别到move的方向是自己的滚动方向，就会拦截并自己处理，并给子view发cancel
 
 ## 1.ViewGroup之dispatchTouchEvent(MotionEvent ev)
 首先分析`ViewGroup`的`dispatchTouchEvent`源码
@@ -64,6 +65,7 @@
                         || (split && actionMasked == MotionEvent.ACTION_POINTER_DOWN)
                         || actionMasked == MotionEvent.ACTION_HOVER_MOVE) {
                     final int actionIndex = ev.getActionIndex(); // DOWN事件总为0，因为总是第一个事件
+                    // 多点触控，可以把事件分发给不同的view
                     final int idBitsToAssign = split ? 1 << ev.getPointerId(actionIndex)
                             : TouchTarget.ALL_POINTER_IDS;
 
