记录Flutter自定义组件的布局和绘制细节

--- a/Flutter/自定义组件.md
+++ b/Flutter/自定义组件.md
@@ -1,28 +1,52 @@
-参考：https://juejin.cn/post/6844903794703073287
 ## 概述
 平时常用的`StatelessWidget`和`StatefulWidget`只是用来组合或者包装其他`Widget`的容器，实际布局和绘制是由`RenderObjectWidget`相关的`RenderObject`来完成。
 
-## 布局绘制流程
-RendererBinding#drawFrame
+在Flutter应用启动流程的分析中，了解到了关于布局和绘制的大致流程，下面进一步具体分析，以此来学习自定义布局和绘制的方式和注意点。
 
+## 布局绘制流程
 ### 布局
-1. PipelineOwner#flushLayout
-2. RenderObject#_layoutWithoutResize
-3. RenderObject#performLayout();
+下面是简化后，保留关键点的`layout`函数：
+```
+// RenderObject
+
+void layout(Constraints constraints, { bool parentUsesSize = false }){
+  ...
+  RenderObject? relayoutBoundary;
+  if (!parentUsesSize || sizedByParent || constraints.isTight || parent is! RenderObject) {
+    relayoutBoundary = this;
+  } else {
+    relayoutBoundary = (parent as RenderObject)._relayoutBoundary;
+  }
+  _constraints = constraints;
+  _relayoutBoundary = relayoutBoundary;
+  if (sizedByParent) {
+    ...
+    performResize();
+    ...
+  }
+  performLayout();
+  ...
+}
+```
+父`RenderObject`会调用子`RenderObject`的`layout`函数，从而完成全部的布局。
+
+参数说明：
+* `constraints`参数：父节点传给子节点的尺寸约束，一般是BoxConstraints，包含最大和最小的宽度高度，如果最大等于最小，就表示确切的尺寸。
+* `parentUsesSize`参数：如果是true（还要考虑`sizedByParent`等变量），将设置`_relayoutBoundary`为父节点的`_relayoutBoundary`，在`markNeedsLayout()`方法中会判断`_relayoutBoundary`不是自身，就会向上调用父节点的`markNeedsLayout()`方法。也就是说，`parentUsesSize`将使子节点自身布局变化时通知父节点。
+
+`RenderObject`的属性和方法说明：
+* `sizedByParent`属性默认为false，如果重写为true，表示父节点传来的`constraints`是决定当前节点尺寸的唯一参考，那么`size`应该在`performResize()`中通过`constraints`去设置，而**不用**在`performLayout()`中再参考子节点的`size`。当然，这只是一种约定，但建议遵守。
+* `performResize()`：如果重写`sizedByParent`属性为true，layout会调用此方法，作用如上所述。
+* `performLayout()`：如果有子节点的话，一是调用`child.layout`来对子节点布局（子节点确定自身尺寸），二是设置`child.parentData.offset`来对子节点**定位**；无论有没有子节点，都需要设置自身尺寸，但如果设置了`sizedByParent`，则不需要。
+
+> 在Flutter应用启动流程笔记中，写到我们传的根Widget对应的RenderObject会被强制铺满屏幕，就是因为`RenderView`的`performLayout`方法中，传给child的约束就是屏幕的大小
 
 ### 绘制
-1. PipelineOwner#flushPaint
-2. PaintingContext#repaintCompositedChild
-3. PaintingContext#_repaintCompositedChild
-4. RenderObject#_paintWithContext
-5. RenderObject#paint
+```
+//RenderObject#paint
 
-## 自定义渲染
-一般继承RenderBox，可参考ConstrainedBox
-
-RenderBox的一些注意点：
-1. size：一般需要在performLayout中设置，表示自身大小
-2. constraints：constraintsu用于约束大小，相当于是大小限制的参考
-3. canvas绘制使用全局坐标系，定位需要使用offset。布局过程中，父Widget一般在performLayout阶段把子Widget的偏移量存在子Widget的BoxParentData.offset，然后在绘制时使用
-
-## 事件处理
+void paint(PaintingContext context, Offset offset) {
+  //...
+}
+```
+绘制部分较简单，核心就是使用`PaintingContext`中的canvas来绘制。如果有子节点，一般还需要调用`context.paintChild(child, child.parentData.offset + offset)`来执行子节点的绘制，`paintChild`方法传的`offset`就是布局时给子节点设置的相对于父节点的偏移加上父节点的偏移。
