--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -3,6 +3,8 @@
 https://www.wanandroid.com/wenda/show/11287
 待办：注意cancel 一般父view 拦截 会给子view发cancel，如果move事件超出子view范围，默认还是发给子view处理，应该例如父view是ScrollView等滚动类的View，识别到move的方向是自己的滚动方向，就会拦截并自己处理，并给子view发cancel
 
+设置视图的 WindowManager 布局参数的 flags为FLAG_WATCH_OUTSIDE_TOUCH，这样点击事件发生在这个视图之外时，该视图就可以接收到一个 ACTION_OUTSIDE 事件。
+
 ## 1.ViewGroup之dispatchTouchEvent(MotionEvent ev)
 首先分析`ViewGroup`的`dispatchTouchEvent`源码
 **几个注意点：**
