调整安卓笔记，记录待办

--- a/Android/Android架构/组件化和模块化.md
+++ b/Android/Android架构/组件化和模块化.md
@@ -58,5 +58,28 @@ app依赖了模块test；test模块中的string.xml有个test_value；在test模
 
 壳
 业务组件
-基础组件
-公共库：框架、接口
+基础组件（播放器、工具库、第三方框架封装、权限请求、日志...，这里面也可分层，比如播放器要依赖日志库）
+
+
+
+1.深入业务
+2.解耦合，拆分模块
+
+
+单一模块，项目复杂后，耦合严重，难以维护
+
+所以需要模块化/组件化 目的就是：解除耦合、功能重用、方便团队协作
+
+注意问题：
+1.包名和资源命名冲突
+2.gradle版本统一
+3.组件在application和library之间切换（两份manifest，一个用于app，一个library）
+
+用一个属性控制app模块之外的其他模块，是application还是library，是library的时候，app才依赖这些模块
+
+还需要组件间通信、事件总线、路由
+
+
+https://github.com/darryrzhong/Android-MvvmComponent-App/blob/master/library-network/src/main/java/com/zhouyou/http/request/BaseBodyRequest.java
+
+https://github.com/Dawish/GoogleArchitectureDemo
