设计模式更新

--- a/设计模式/结构型模式.md
+++ b/设计模式/结构型模式.md
@@ -395,4 +395,6 @@ class Proxy extends Subject {
 }
 ```
 
-装饰模式关注于在一个对象上动态的添加业务方法、代码，然而代理模式关注于控制对对象的访问。装饰模式一般使用组合，需要注入原始对象，而代理模式一般内部封装创建。
+装饰模式关注于在一个对象上动态的添加业务方法、代码，然而代理模式关注于控制对对象的访问。装饰模式一般使用组合，需要注入原始对象，而代理模式一般内部封装创建。或者说，装饰模式一般需要运行时动态组装，而代理模式一般是编译时就确定好的；使用代理模式时，是不需要知道原对象的，拿到的就是Proxy，而装饰模式需要拿到原对象来组装。
+
+总的来说，设计模式是可以混用的，使用时不用严格区分，但不同设计模式的设计思想是可以区分的。
