--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -3,7 +3,7 @@ https://github.com/enbandari/CoroutineLite 用于学习的简化版协程
 
 https://github.com/Kotlin-zh/KEEP/blob/master/proposals/coroutines.md
 
-谷歌开发者 微信公众号
+谷歌开发者 微信公众号 kotlin话题
 
 https://proandroiddev.com/async-operations-with-kotlin-coroutines-part-1-c51cc581ad33
 
@@ -44,6 +44,9 @@ https://www.jianshu.com/p/06703abc56b1
 https://www.jianshu.com/p/d23c688feae7
 
 https://discuss.kotliner.cn/ kotlin 中文论坛
+
+https://zhuanlan.zhihu.com/p/138802478
+https://zhuanlan.zhihu.com/p/139582669
 
 ## 1. 概述
 协程可以用来简化异步执行的代码，异步不一定是多线程，只要是切换了调用栈就会产生异步，比如dialog的确定和取消的点击事件回调就是切换了调用栈，但并没有多线程。
