--- a/Kotlin/类型系统.md
+++ b/Kotlin/类型系统.md
@@ -82,6 +82,10 @@ fun demo(strs: Source<String>) {
 ```
 对于如上例子，在Java中就必须使用 ? extends。kotlin中使用 `out` 实现了协变，Source 类型就是 T 类型的生产者，可以读取。
 
+Java只有使用时型变；kotlin既有使用时型变，又有声明时型变，都可以用in和out
+
+Java和Kotlin声明时都可以指定上界。限制上界，和型变是两回事
+
 ```
 interface Comparable<in T> {
     operator fun compareTo(other: T): Int
