泛型的再度思考

--- a/Kotlin/类型系统.md
+++ b/Kotlin/类型系统.md
@@ -80,7 +80,7 @@ fun demo(strs: Source<String>) {
     // ……
 }
 ```
-对于如上例子，在Java中就必须使用 ? extends。kotlin中使用 `out` 实现了协变，Source 类型就是 T 类型的生产者，可以读取。
+对于如上例子，在Java中就必须使用 ? extends。kotlin中使用 `out` 实现了协变，Source 类型就是 T 类型的生产者，可以读取，kotlin的思路就是提前限制只能读取，所以可以直接使用`Source<Any> = strs`。Java只能在使用时去使用  ? extends 来限制
 
 Java只有使用时型变；kotlin既有使用时型变，又有声明时型变，都可以用in和out
 
@@ -99,6 +99,21 @@ fun demo(x: Comparable<Number>) {
 ```
 如上例子，在Java中就必须使用 ? super。kotlin 中使用 `in` 实现了逆变。
 
+协变和逆变只是让泛型情况的类型可以赋值：
+```
+List<? extends Parent> list = new ArrayList<Sub>();
+Parent parent = list.get(0);
+```
+`<? super Parent>`只是表示泛型情况能赋值泛型类型是Parent父类的类型，但是对`List<? super Parent>`使用的时候也只能添加Parent或者子类，并不是list中能添加Parent的父类
+```
+List<? super Parent> list = new ArrayList<Object>();
+list.add(new Parent());
+list.add(new Sub());
+```
+所以Java的泛型中使用 ? super 有点容易误会它的效果，这样看来是不如kotlin的 `in` 明确
+
+
+所以总体来说，泛型为了安全，所以让`List<Parent>`并不是`List<Sub>`的父类，但在一些场景中，我们需要更灵活得赋值和传参，此时使用协变和逆变来限制会产生异常的行为，从而提升类型转换的灵活性，当然也牺牲了`生产`或者`消费`的其中一个功能。
 
 #### 使用处型变 类型投影
 前面的型变例子是在声明时限制，也就是说在声明时就确定了泛型只能作为生产者或者消费者。但是有些情况在声明时不能确定，比如数组类型。这种情况可以在使用时限制。
