Android视图动画的原理再分析

--- a/Android/View/坐标系、滑动、手势.md
+++ b/Android/View/坐标系、滑动、手势.md
@@ -15,6 +15,8 @@
 `getX()`：即 `mLeft + getTranslationX()`，即控件的左边缘距离其父控件左边缘的位置加上 X 方向平移的距离；
 `getY()`：即 `mTop + getTranslationY()`，即控件的上边缘距离其父控件上边缘的位置加上 Y 方向平移的距离；
 
+视图动画中的translation只是临时的矩阵变化，用于绘制过程。而View的setTranslationX等方法，会设置属性到RenderNode中，绘制时会调用getMatrix()获取到变换矩阵改变绘制，并且在触摸事件分发时会调用isTransformedTouchPointInView根据属性转换坐标，所以视图动画转换后的位置无法响应触摸事件，而调用setTranslationX后的位置可以响应触摸事件。scale同理。
+
 #### 1.2 宽高
 获取 **View** **高度**和**宽度**信息的方法：
 `getHeight()`：即 mBottom - mTop；
