--- a/Kotlin/协程.md
+++ b/Kotlin/协程.md
@@ -251,6 +251,14 @@ println("Completed in $time ms")
 用 launch 启动多个协程，也可以达到并发执行的目的。
 
 #### 结构化并发
+结构化编程，顺序、分支、循环；非结构化编程 goto。
+
+* 结构化编程对程序控制权的直接转移进行了限制和规范。
+* 面向对象编程对程序控制权的间接转移进行了限制和规范。
+* 函数式编程对程序中的赋值进行了限制和规范。
+
+这三个编程范式分别限制了goto语句、函数指针和赋值语句的使用。分别和软件架构中的三大关注重点对应：功能性、组件独立性、数据管理
+
 结构化并发就是 parent 总会等待 children 完成。不会丢失正在工作的协程，不会丢失异常。
 
 #### 惰性启动
@@ -367,8 +375,9 @@ https://github.com/enbandari/DiveIntoKotlinCoroutines-Sources 中的 `Generator.
 ---------------------------
 
 #### 继承关系
-协程作用域和它启动的协程，以及协程启动的子协程，上下文中除了Job都会继承，而协程作用域的Job是启动的协程的父Job，协程的Job又是子协程的父Job
+协程作用域和它启动的协程，以及协程启动的子协程，上下文中除了Job都会继承（因为每个启动的协程自身就是Job，所以自身的上下文会用自己的Job覆盖），而协程作用域的Job是启动的协程的父Job，协程的Job又是子协程的父Job。
 
+作用域创建时，自身会有一个默认的Job，它就会作为启动的协程的父Job，但是如果在launch方法中传入Job，那么传入的Job才会是启动的协程的父Job，此时使用作用域的取消，就无法取消子协程了，因为作用域的Job并不是启动的协程的父Job
 
 #### 取消
 Kotlin协程的取消：取消作用域会取消它启动的协程，取消协程Job会取消子协程Job。在协程代码中可以主动判断作用域是否被取消，从而自定义逻辑。对于挂起函数，官方提供的挂起函数都支持取消，而我们写的挂起函数要支持取消的话，则要使用suspendCancellableCoroutine。在挂起函数中，既可以主动判断是否已取消，也可以监听取消的回调。
