复习过程的笔记修正和调整

--- a/Android/Android架构/组件化和模块化.md
+++ b/Android/Android架构/组件化和模块化.md
@@ -4,7 +4,7 @@
 
 参考：
 [Android组件化方案](https://blog.csdn.net/guiying712/article/details/55213884)
-[安居客Android项目架构演进](https://www.jianshu.com/p/6fcff2abf468)
+[安居客Android项目架构演进](https://zhuanlan.zhihu.com/p/25420181)
 [组件化架构设计](https://www.jianshu.com/p/06931c9b78dc)
 [Android 路由框架ARouter最佳实践](https://blog.csdn.net/zhaoyanjun6/article/details/76165252)
 [网易友品 Android 客户端组件化演进](https://mp.weixin.qq.com/s/Xvx8hqjTA21sfaCvGEJSUw)
