--- a/Android/ContentProvider/内容提供器的使用和原理.md
+++ b/Android/ContentProvider/内容提供器的使用和原理.md
@@ -207,7 +207,7 @@ private void installContentProviders(
                 // 创建ContentProvider实例
                 localProvider = packageInfo.getAppFactory()
                         .instantiateProvider(cl, info.name);
-                // 得到ContentProvider对应的
+                // 得到ContentProvider对应的Binder
                 provider = localProvider.getIContentProvider();
                 if (provider == null) {
                     //...
