--- a/Android/View/触摸事件分发.md
+++ b/Android/View/触摸事件分发.md
@@ -30,7 +30,7 @@ https://www.wanandroid.com/wenda/show/11287
             // 检测是否拦截
             final boolean intercepted;
             //满足以下两种情况之一才检测是否要拦截事件
-            //1.事件为DOWN             2.mFirstTouchTarget != null即有子view消费事件（初始为null）
+            //1.事件为DOWN    2.其他事件，但mFirstTouchTarget != null即有子view消费事件（初始为null）
             //拦截后，mFirstTouchTarget 会被置null，所以一旦拦截将不再判断是否拦截
             if (actionMasked == MotionEvent.ACTION_DOWN
                     || mFirstTouchTarget != null) {
@@ -55,25 +55,33 @@ https://www.wanandroid.com/wenda/show/11287
                     || actionMasked == MotionEvent.ACTION_CANCEL;
 
             // Update list of touch targets for pointer down, if needed.
+
+            // split表示是否支持多点触控，默认支持
             final boolean split = (mGroupFlags & FLAG_SPLIT_MOTION_EVENTS) != 0;
+
+            // 记录事件分发的目标控件
             TouchTarget newTouchTarget = null;
-            //alreadyDispatchedToNewTouchTarget 只有当是DOWN事件且被child消费才置true
+
+
+            // 记录事件是否以及派发给新的目标控件，用于判断已分发的事件，避免重复分发。只有当是DOWN事件且被child消费才置true
             boolean alreadyDispatchedToNewTouchTarget = false;
-            //如果没有cancel也没有拦截，就进入这个if
+            //如果没有cancel也没有拦截，就进入这个if，寻找newTouchTarget
             if (!canceled && !intercepted) {
                 ......
                 //如果是DOWN事件（包括多点触控的DOWN），就进入这个if
                 if (actionMasked == MotionEvent.ACTION_DOWN
                         || (split && actionMasked == MotionEvent.ACTION_POINTER_DOWN)
                         || actionMasked == MotionEvent.ACTION_HOVER_MOVE) {
-                    final int actionIndex = ev.getActionIndex(); // DOWN事件总为0，因为总是第一个事件
+                    final int actionIndex = ev.getActionIndex(); // 触摸事件索引
                     // 多点触控，可以把事件分发给不同的view
+                    // 即把PointerId记录通过位进行保存，例如0对应0000 0001，1对应0000 0010
                     final int idBitsToAssign = split ? 1 << ev.getPointerId(actionIndex)
                             : TouchTarget.ALL_POINTER_IDS;
 
-                    // Clean up earlier touch targets for this pointer id in case they
-                    // have become out of sync.
+                    // 清除链表和此手指id对应的TouchTarget
                     removePointersFromTouchTargets(idBitsToAssign);
+
+                    // 开始遍历子控件
                     final int childrenCount = mChildrenCount;
                     //子view数量大于0，就进入这个if
                     if (newTouchTarget == null && childrenCount != 0) {
@@ -94,21 +102,22 @@ https://www.wanandroid.com/wenda/show/11287
                             final View child = getAndVerifyPreorderedView(
                                     preorderedList, children, childIndex);
                             ......
-                            //如果子view不可见且动画为空 或者 坐标不在这个子view范围内 就跳过这个子view
+                            // 如果子view不可见且动画为空 或者 坐标不在这个子view范围内 就跳过这个子view
                             if (!canViewReceivePointerEvents(child)
                                     || !isTransformedTouchPointInView(x, y, child, null)) {
                                 ev.setTargetAccessibilityFocus(false);
                                 continue;
                             }
-                            //此方法会遍历以mFirstTouchTarget为首的链表，找到含当前child的TouchTarget，
-                            //单点触控时DOWN会把mFirstTouchTarget置null，所以newTouchTarget必为null
-                            //多点触控时，非首个DOWN时，不为null
+                            // 查找TouchTarget链表中是否已有此child的记录。多点触控的后续DOWN才存在这个情况。
                             newTouchTarget = getTouchTarget(child);
                             if (newTouchTarget != null) {
-                                // 多点触控时，设新的手指IdBits
+                                // 把当前手指Id也合并到TouchTarget中
                                 newTouchTarget.pointerIdBits |= idBitsToAssign;
                                 break;
                             }
+
+                            // 如果之前没有此child的记录
+
                             //重置标志位
                             resetCancelNextUpFlag(child);
                             //根据传入的参数，dispatchTransformedTouchEvent实际会调用child的 
@@ -116,6 +125,8 @@ https://www.wanandroid.com/wenda/show/11287
                             if (dispatchTransformedTouchEvent(ev, false, child, idBitsToAssign)) {
                                 // child消费了DOWN事件，就记录DOWN的一些信息，如时间
                                 mLastTouchDownTime = ev.getDownTime();
+
+                                //-----------绘制顺序相关，可忽略
                                 if (preorderedList != null) {
                                     // childIndex points into presorted list, find original index
                                     for (int j = 0; j < childrenCount; j++) {
@@ -127,6 +138,8 @@ https://www.wanandroid.com/wenda/show/11287
                                 } else {
                                     mLastTouchDownIndex = childIndex;
                                 }
+                                //-------------
+
                                 mLastTouchDownX = ev.getX();
                                 mLastTouchDownY = ev.getY();
                                 //child消费了DOWN，将child和idBitsToAssign构造成的TouchTarget 
@@ -137,22 +150,19 @@ https://www.wanandroid.com/wenda/show/11287
                                 alreadyDispatchedToNewTouchTarget = true;
                                 break;
                             }
-
-                            // The accessibility focus didn't handle the event, so clear
-                            // the flag and do a normal dispatch to all children.
-                            ev.setTargetAccessibilityFocus(false);
+                            // ...
                         }
                         //循环结束，清空view树的前序遍历列表
                         if (preorderedList != null) preorderedList.clear();
                     }
-                    //DOWN事件但不是第一个手指，且child未消费，才进入下面if
+                    // DOWN事件但不是第一个手指，且child未消费ACTION_POINTER_DOWN(newTouchTarget为null)，才进入下面if
                     if (newTouchTarget == null && mFirstTouchTarget != null) {
-                        // Did not find a child to receive the event.
-                        // Assign the pointer to the least recently added target.
+                        // 使newTouchTarget指向mFirstTouchTarget链表最后的元素
                         newTouchTarget = mFirstTouchTarget;
                         while (newTouchTarget.next != null) {
                             newTouchTarget = newTouchTarget.next;
                         }
+                        // 并把本次的pointId记录到该TouchTarget
                         newTouchTarget.pointerIdBits |= idBitsToAssign;
                     }
                 }
@@ -177,7 +187,7 @@ https://www.wanandroid.com/wenda/show/11287
                 while (target != null) {
                     final TouchTarget next = target.next;
                     if (alreadyDispatchedToNewTouchTarget && target == newTouchTarget) {
-                        //DOWN事件且被child消费
+                        //DOWN事件且以及被child消费
                         handled = true;
                     } else {
                         //其他事件，先获取cancelChild值，被拦截或child设置了cancel up，则为true
@@ -218,6 +228,7 @@ https://www.wanandroid.com/wenda/show/11287
             } else if (split && actionMasked == MotionEvent.ACTION_POINTER_UP) {
                 final int actionIndex = ev.getActionIndex();
                 final int idBitsToRemove = 1 << ev.getPointerId(actionIndex);
+                // 移除触控点对应的TouchTarget内的pointerIdBits记录，如果该TouchTarget仅有此记录，则移除该TouchTarget
                 removePointersFromTouchTargets(idBitsToRemove);
             }
         }
