--- a/Android/优化/网络优化.md
+++ b/Android/优化/网络优化.md
@@ -11,4 +11,16 @@ https://mp.weixin.qq.com/s/UhF2KCASoIhTiKXPFOPiww
 https://blog.helong.info/blog/2015/09/07/tls-protocol-analysis-and-crypto-protocol-design/
 
 弱网
-监控
+监控 Okhttp事件监听，确定每一步的耗时
+
+1. dns优化，缓存域名对应的ip，之后访问直接使用ip
+2. 缓存
+3. socket连接池
+4. 使用protobuf格式，而不是json
+5. 业务变更，及时调整冗余的json数据
+6. 使用gzip压缩
+
+http 1.1 长连接keep-alive  cache-control
+http 2.0 二进制、多路复用、头部压缩、服务器推送：服务器可以额外的向客户端推送资源，而无需客户端明确的请求
+
+dns服务商出问题，可以使用第三方dns来兜底
