--- a/Java/注解基础.md
+++ b/Java/注解基础.md
@@ -79,7 +79,7 @@ enum TestEnum {
 ```
 ## 3. 元注解
 元注解就是用于注解的注解。
-###### @Target
+#### @Target
 `@Target`用于指定一个注解可以应用哪些项上，比如用于域和方法：
 ```
 @Target({ElementType.FIELD, ElementType.METHOD})
@@ -87,16 +87,16 @@ public @interface TestAnnotation {
 ...
 }
 ```
-###### @Retention
+#### @Retention
 `@Retention`用于指定注解应该保留到什么时候。
 * `RetentionPolicy.SOURCE` 仅保留于源文件，编译后消失
 * `RetentionPolicy.CLASS` 保留到类文件，但不会加载进JVM
 * `RetentionPolicy.RUNTIME` 保留到类文件，并加载进JVM，可以通过反射获得它们的信息
-###### @Documented
+#### @Documented
 为Javadoc这样的归档工具提供一些提示，让一个注解包含在文档中。
-###### @Inherited
+#### @Inherited
 用`@Inherited`注解一个注解，然后用该注解去注解一个超类，然后子类也会继承该注解。
-###### @Repeatable
+#### @Repeatable
 ```
 @Repeatable(Phones.class)//元素为它的容器注解
 @interface Phone{
