flutter的widget细节和状态管理再分析

--- a/Flutter/状态管理.md
+++ b/Flutter/状态管理.md
@@ -1,4 +1,17 @@
-## InheritedWidget
+## 状态管理概述
+如果在Android开发中，一个activity中的各个view，是可以很方便的相互访问。但是在flutter中，没有findViewById这样的方式来访问其他widget，如果A强行持有B的State，然后A去调用B的State的setState方法，也可以达到访问的目的，但是会造成强耦合性，好像是在和框架设计做对抗。所有的声明式UI框架都是UI=f(state)，所以我们可以通过状态管理来达到通信的目的。
+
+## 状态管理和通信常用方式
+* 回调
+* valueNotifier
+* InheritedWidget 自上而下 也有观察作用
+* NotificationListener 自下而上
+* Provider
+* Redux：核心角色的作用为Store存储自定义的State类，并持有Reducer作为处理Action的函数。对应到Flutter中，StoreProvider作为上层Widget，持有Store及其中的State，也持有Reducer；使用StoreProvider.of可以dispatch定义的Action，StoreProvider收到Action，会调用Reducer并得到新的State，然后会通知（用到StreamBuilder）StoreConnector重建内部Widget。
+* BLoC
+* ...
+
+## InheritedWidget分析
 InheritedWidget可以用于在Widget树中向下共享数据。
 
 首先定义一个继承InheritedWidget的ShareDataWidget类，它提供了data数据：
