头文件的理解

--- a/C与Linux/作用域规则.md
+++ b/C与Linux/作用域规则.md
@@ -67,6 +67,8 @@ int entity = 3;
 
 所以头文件中的变量或函数等，源文件中都可以访问。
 
+> 头文件并非必要，它主要是为了多文件编译时，各个源文件包含头文件，就可以共享函数声明、常量等信息，否则就要复制声明到每个源文件中才能编译，比较麻烦。同时，将声明与实现分离，也可以减少编译时间，比如修改了实现部分，依赖头文件的其他源文件并不需要再编译。Java、Swift等编程语言，已经不再有头文件的设计。
+
 ## 链接
 C变量有三种链接属性：外部链接、内部链接、无链接。  
 具有块作用域、函数作用域、函数原型作用域的变量都是**无链接变量**，这意味着这些变量属于定义它们的块、函数或原型私有。具有文件作用域的变量可以是**外部链接**或**内部链接**。  
